; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_pasemi_mac_ethtool.c_pasemi_mac_ethtool_get_ringparam.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_pasemi_mac_ethtool.c_pasemi_mac_ethtool_get_ringparam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_ringparam = type { i32, i32, i32, i32 }
%struct.pasemi_mac = type { i32, i32 }

@TX_RING_SIZE = common dso_local global i32 0, align 4
@RX_RING_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.ethtool_ringparam*)* @pasemi_mac_ethtool_get_ringparam to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pasemi_mac_ethtool_get_ringparam(%struct.net_device* %0, %struct.ethtool_ringparam* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ethtool_ringparam*, align 8
  %5 = alloca %struct.pasemi_mac*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.ethtool_ringparam* %1, %struct.ethtool_ringparam** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.pasemi_mac* @netdev_priv(%struct.net_device* %6)
  store %struct.pasemi_mac* %7, %struct.pasemi_mac** %5, align 8
  %8 = load i32, i32* @TX_RING_SIZE, align 4
  %9 = sdiv i32 %8, 2
  %10 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %4, align 8
  %11 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.pasemi_mac*, %struct.pasemi_mac** %5, align 8
  %13 = getelementptr inbounds %struct.pasemi_mac, %struct.pasemi_mac* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @RING_USED(i32 %14)
  %16 = sdiv i32 %15, 2
  %17 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %4, align 8
  %18 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @RX_RING_SIZE, align 4
  %20 = sdiv i32 %19, 4
  %21 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %4, align 8
  %22 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 4
  %23 = load %struct.pasemi_mac*, %struct.pasemi_mac** %5, align 8
  %24 = getelementptr inbounds %struct.pasemi_mac, %struct.pasemi_mac* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @RING_USED(i32 %25)
  %27 = sdiv i32 %26, 4
  %28 = load %struct.ethtool_ringparam*, %struct.ethtool_ringparam** %4, align 8
  %29 = getelementptr inbounds %struct.ethtool_ringparam, %struct.ethtool_ringparam* %28, i32 0, i32 3
  store i32 %27, i32* %29, align 4
  ret void
}

declare dso_local %struct.pasemi_mac* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @RING_USED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
